--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-navbar-mobile": "^1.0.1",
     "bootstrap-select": "^1.13.9",
     "core-js": "^2.5.4",
     "firebase": "^5.8.2",
     "jquery": "^3.3.1",
+    "ng-multiselect-dropdown": "^0.2.3",
     "ng-recaptcha": "^4.2.1",
     "ng4-loading-spinner": "^1.2.3",
     "rxjs": "~6.3.3",
+    "tooltip.js": "^1.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
